fix: Changed Header z-index

--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -13,7 +13,7 @@
 	position: sticky;
 	width: 100%;
 	top: 0;
-	z-index: 1;
+	z-index: 2;
 	
 	.Header__logo {
 	}
